--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,11 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="22"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MyActivity"
+    <application android:label="@string/app_name"
+                 android:icon="@drawable/ic_launcher">
+        <activity android:name=".GameMainActivity"
+                  android:screenOrientation="sensorLandscape"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
